# AUTOSRA_TASK_E2E_SIMULATIUON

./: .gitignore  CMakeLists.txt  DAG.cpp  DAG.hpp  DAG_Generator  DAG_Generator.cpp  DAG_SYSTEM.cpp  DAG_Simulation.cpp  README.md  RUNNABLE.cpp  RUNNABLE.hpp  Random_DAG_Generator  Random_DAG_Generator.cpp  TASK.cpp  TASK.hpp  communication.hpp  communication_LET.cpp  communication_RunnableImplicit.cpp  communication_TaskImplicit.cpp  dag1  dag1.cpp  generation.hpp  main  main.cpp  mapping.hpp  mapping_RandomMapping.cpp  readmemory.hpp  readmemory_Immediate.cpp  readmemory_ReleaseTime.cpp  readmemory_ReleaseTimeRead.cpp  readmemory_StartOfRunnableRead.cpp  readmemory_StartOfTaskRead.cpp  simulate.cpp  simulation.cpp  simulation.hpp  simulation_types.hpp  writememory.hpp  writememory_EndOfRunnable.cpp  writememory_EndOfRunnableWrite.cpp  writememory_EndOfTask.cpp  (+4 more)
Compare_data/: DAG_2022_9_12_17_26_data_age.json  Result_2022_9_12_17_26_data_age.json
Compare_data/example_dag_mapping/: DAG_Example.json  (+1 more)
app/: CMakeLists.txt  detail.cpp  main.cpp
data/: DAG_2022_8_29_21_15.json  DAG_2022_8_29_21_16.json  DAG_2022_8_29_22_18.json  DAG_2022_8_29_22_22.json  DAG_2022_8_29_22_25.json  DAG_2022_8_29_22_27.json  DAG_2022_8_29_22_29.json  DAG_2022_8_29_22_30.json  DAG_2022_8_29_22_31.json  DAG_2022_8_29_22_33.json  DAG_2022_8_29_22_36.json
include/: DAG.hpp  RUNNABLE.hpp  StrategyIndex.hpp  TASK.hpp  autosar_simulation_global_variable.hpp  communication.hpp  detailsimulation.h  mapping.hpp  precedence.hpp  sequence.hpp  simulation.hpp  simulation_types.hpp
lib/: CMakeLists.txt  DAG.cpp  RUNNABLE.cpp  TASK.cpp  communication.cpp  detailsimulation.cpp  mapping.cpp  precedence.cpp  sequence.cpp  simulation.cpp
